# Miscellaneous

./: .gitignore  README.md
Bash/: nyaa
C++/: fizzbuzz.cpp
C++/airport-gates/: airport.cpp  airport.txt
C++/circular-ll/: README.md  circular_ll.h  test-circular.cpp
C++/fizzbuzz/: fizzbuzz.cpp
C++/league-of-efficiency/: CMakeLists.txt  README.md  results.md
C++/league-of-efficiency/src/: jsonutils.cpp  jsonutils.h  main.cpp  spell.cpp  spell.h  utils.cpp  utils.h
C++/matching-strings/: matching.cpp  matching.txt
Competition/codejam2016/bleatrix/: README.md
Competition/codejam2016/fractiles/: README.md
Competition/codejam2016/jamcoins/: README.md  main.cpp
Competition/codejam2016/pancakes/: README.md  main.cpp
Competition/msft3c/16-08-31/: p3  (+12 more)
Java/: sampleCLI
Java/sampleCLI/: README.md  nbactions.xml  pom.xml
NodeJS/telegram-bot-legion/: README.md  events.js  index.js  package.json  utils.js
PHP/: rand_image.php
PHP/salty-elo/: README.md
Python/: choice.py  lab8.py  rsser.py  sudowoodo.py
Python/upe-aicomp/: README.md
RPI/: README.md
RPI/LLVM-Compiler-Case-Study/: README.md
RPI/OPSYS15F/: README.md
RPI/PARALLEL16S/: README.md
RPI/PROGLANG16F/: README.md
Web/A N I M E/: README.md
Web/OntologySOA/: ProblemDefinition.md  README.md  ontology.json  package.json
Web/OntologyService/: ProblemDefinition.md  README.md
Web/lycheetime-old/: .htaccess  auth.php  example.html  index.php  logout.php  save.php
Web/reddit-redux/: package-lock.json  package.json
Web/reddit-redux-reduxed/: README.md  package-lock.json  package.json
(+180 files in other folders)
